Support dependency reloading at runtime [IMMUTANT-90]
This currently only picks up changes from project.clj,
and doesn't allow the injection of arbitrary dependencies.